# stalwart

./: .editorconfig  .env.in  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.build.dev  Dockerfile.fdb  SECURITY_AUDIT_REPORT.md  devspace.yaml  devspace_start.sh  docker-compose.yml  install.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/modules/: cli.rs  database.rs
crates/common/: Cargo.toml
crates/common/src/: core.rs  lib.rs
crates/common/src/auth/: mod.rs
crates/common/src/auth/oauth/: config.rs  mod.rs
crates/common/src/config/: inner.rs  telemetry.rs
crates/common/src/config/mailstore/: email.rs
crates/common/src/manager/: boot.rs
crates/common/src/sharing/: resources.rs
crates/common/src/storage/: dav.rs  index.rs  quota.rs
crates/dav/: Cargo.toml
crates/dav-proto/: Cargo.toml
crates/dav-proto/src/: lib.rs
crates/dav-proto/src/parser/: header.rs
crates/dav-proto/src/responses/: mod.rs  property.rs
crates/dav-proto/src/schema/: request.rs
crates/dav/src/: request.rs
crates/dav/src/calendar/: copy_move.rs  mod.rs  update.rs
crates/dav/src/card/: copy_move.rs  mod.rs  proppatch.rs  update.rs
crates/dav/src/common/: acl.rs  lock.rs  mod.rs  propfind.rs
crates/dav/src/file/: copy_move.rs  get.rs  proppatch.rs
crates/directory/: Cargo.toml
crates/directory/src/core/: secret.rs
crates/email/: Cargo.toml
crates/email/src/cache/: email.rs  mod.rs
crates/email/src/mailbox/: destroy.rs  mod.rs
crates/email/src/message/: copy.rs  delete.rs  delivery.rs  ingest.rs  messagedata.rs  metadata.rs  mod.rs
crates/email/src/sieve/: ingest.rs
crates/groupware/: Cargo.toml
crates/groupware/src/cache/: calcard.rs  mod.rs
crates/groupware/src/calendar/: index.rs  storage.rs
crates/groupware/src/contact/: index.rs  mod.rs
crates/groupware/src/file/: storage.rs
crates/http/: Cargo.toml
crates/http-proto/: Cargo.toml
crates/http-proto/src/: lib.rs  request.rs  response.rs
crates/http/src/: request.rs
crates/http/src/management/: mod.rs  reload.rs  troubleshoot.rs
crates/imap/: Cargo.toml
crates/imap-proto/: Cargo.toml
crates/imap-proto/src/parser/: mod.rs
crates/imap-proto/src/protocol/: capability.rs  mod.rs
crates/imap/src/core/: message.rs
crates/imap/src/op/: append.rs  copy_move.rs  create.rs  expunge.rs  fetch.rs  search.rs  store.rs
crates/jmap/: Cargo.toml
crates/jmap-proto/: Cargo.toml
crates/jmap-proto/src/references/: eval.rs  mod.rs
crates/jmap-proto/src/request/: capability.rs  method.rs
crates/jmap/src/addressbook/: get.rs  set.rs
crates/jmap/src/api/: acl.rs  auth.rs  event_source.rs  query.rs  session.rs
crates/jmap/src/blob/: download.rs  get.rs
crates/jmap/src/calendar/: get.rs
crates/jmap/src/calendar_event/: copy.rs  mod.rs  query.rs  set.rs
crates/jmap/src/calendar_event_notification/: get.rs  query.rs  set.rs
crates/jmap/src/contact/: copy.rs  get.rs  mod.rs  query.rs  set.rs
crates/jmap/src/email/: copy.rs  get.rs  import.rs  query.rs  set.rs
crates/jmap/src/file/: get.rs  mod.rs  query.rs
crates/jmap/src/mailbox/: set.rs
crates/jmap/src/principal/: availability.rs
crates/jmap/src/quota/: get.rs
crates/jmap/src/registry/: set.rs
crates/jmap/src/sieve/: set.rs
crates/jmap/src/thread/: get.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs  test_data.rs
crates/managesieve/: Cargo.toml
crates/migration/: Cargo.toml
crates/migration/src/: v016.rs
crates/nlp/: Cargo.toml
crates/nlp/src/language/: mod.rs
crates/pop3/: Cargo.toml
crates/services/: Cargo.toml
crates/services/src/housekeeper/: mod.rs
crates/services/src/task_manager/: index.rs  maintenance.rs  merge_threads.rs
crates/smtp/: Cargo.toml
crates/smtp/src/core/: mod.rs
crates/smtp/src/inbound/: spam.rs
crates/smtp/src/outbound/: session.rs
crates/smtp/src/reporting/: inbound.rs
crates/spam-filter/: Cargo.toml
crates/spam-filter/src/: lib.rs
crates/spam-filter/src/analysis/: classifier.rs  init.rs  recipient.rs  replyto.rs  score.rs  subject.rs
crates/spam-filter/src/modules/: classifier.rs  expression.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/src/dispatch/: search.rs  store.rs
crates/store/src/query/: sort.rs
crates/store/src/search/: document.rs  fields.rs  index.rs  local.rs  maintain.rs  mod.rs  query.rs  split.rs  term.rs  tokenize.rs
crates/store/src/write/: key.rs  mod.rs
crates/trc/: Cargo.toml
crates/trc/event-macro/: Cargo.toml
crates/trc/src/: lib.rs
crates/trc/src/serializers/: binary.rs
crates/types/: Cargo.toml
crates/types/src/: field.rs  keyword.rs
crates/utils/: Cargo.toml
crates/utils/proc-macros/: Cargo.toml
crates/utils/src/: cheeky_hash.rs  lib.rs
crates/utils/src/map/: bitmap.rs
tests/: Cargo.toml
tests/docker/: docker-compose.yml
tests/docker/pebble/: Dockerfile.challtestsrv
tests/docker/powerdns/: init-zone.sh  pdns.conf
tests/docker/scripts/: init-fdb.sh
tests/resources/jmap/email_get/: headers.json  message_attachment.json  multipart_alternative.json  multipart_cid.json  multipart_mixed.json  multipart_related.json  rfc8621.json  single_part.json  text_body_missing.json  text_body_missing_multipart.json
tests/resources/jmap/email_set/: headers.jmap  minimal.jmap  mixed.jmap  nested_body.jmap  rfc8621_1.jmap  rfc8621_2.jmap
tests/src/: http_server.rs
tests/src/cluster/: stress.rs
tests/src/imap/: antispam.rs  body_structure.rs  copy_move.rs  fetch.rs  idle.rs  mailbox.rs
tests/src/jmap/: push_subscription.rs  thread_merge.rs  webhooks.rs
tests/src/jmap/auth/: oauth.rs
tests/src/jmap/files/: acl.rs
tests/src/jmap/mail/: query.rs  query_changes.rs  set.rs  sieve_script.rs
tests/src/smtp/inbound/: milter.rs
tests/src/smtp/management/: queue.rs
tests/src/store/: blob.rs  import_export.rs  ops.rs  query.rs  registry.rs
tests/src/system/: task.rs
tests/src/telemetry/: metrics.rs
tests/src/utils/: cleanup.rs  registry.rs  storage.rs
tests/src/webdav/: mod.rs  put_get.rs  sync.rs
(+97 files in other folders)
