[package]
name = "common"
edition = "2024"
version = "0.0.1"
build = "build.rs"

[dependencies]
aes-gcm-siv = "0.11.1"
arc-swap = "1.6.0"
base64 = "0.22"
biscuit = "0.7.0"
decancer = "3.0.1"
futures = "0.3"
hashify = "0.2"
hostname = "0.4.0"
idna = "1.0"
imagesize = "0.14"
indexmap = "2.7.1"
infer = "0.19"
md5 = "0.8.0"
num_cpus = "1.13.1"
parking_lot = "0.12.1"
pem = "3.0"
psl = "2"
pwhash = "1.0.0"
rcgen = "0.12"
regex = "1.7.0"
rsa = "0.9.2"
rustls-pemfile = "2.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10.6"
tinyvec = "1.9.0"
unicode-security = "0.1.0"
whatlang = "0.18"
x509-parser = "0.18"
zip = "6.0"

[dependencies.ahash]
version = "0.8.2"
features = ["serde"]

[dependencies.bincode]
version = "2.0"
features = ["serde"]

[dependencies.calcard]
version = "0.3"
features = ["rkyv"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.compact_str]
version = "0.9.0"
features = ["rkyv", "serde"]

[dependencies.directory]
path = "../directory"

[dependencies.dns-update]
version = "0.1.5"

[dependencies.hyper]
version = "1.0.1"
features = ["server", "http1", "http2"]

[dependencies.imap_proto]
path = "../imap-proto"

[dependencies.jmap_proto]
path = "../jmap-proto"

[dependencies.lz4_flex]
version = "0.12"
features = ["frame"]
default-features = false

[dependencies.mail-auth]
version = "0.7.1"

[dependencies.mail-builder]
version = "0.4"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding"]

[dependencies.mail-send]
version = "0.5"
features = ["cram-md5", "ring", "tls12"]
default-features = false

[dependencies.nlp]
path = "../nlp"

[dependencies.opentelemetry]
version = "0.29"

[dependencies.opentelemetry-otlp]
version = "0.29"
features = ["reqwest-client", "http-proto", "trace", "metrics", "logs", "internal-logs", "grpc-tonic", "tls-webpki-roots", "reqwest-rustls-webpki-roots"]
default-features = false

[dependencies.opentelemetry-semantic-conventions]
version = "0.29.0"

[dependencies.opentelemetry_sdk]
version = "0.29"

[dependencies.p256]
version = "0.13"
features = ["ecdh"]

[dependencies.p384]
version = "0.13"
features = ["ecdh"]

[dependencies.prometheus]
version = "0.14"
default-features = false

[dependencies.proxy-header]
version = "0.1.0"
features = ["tokio"]

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls-webpki-roots", "http2", "stream"]
default-features = false

[dependencies.ring]
version = "0.17"

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.rustls]
version = "0.23.5"
features = ["std", "ring", "tls12"]
default-features = false

[dependencies.rustls-pki-types]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sieve-rs]
version = "0.7"
features = ["rkyv", "serde"]

[dependencies.smtp-proto]
version = "0.2"
features = ["rkyv"]

[dependencies.store]
path = "../store"

[dependencies.tokio]
version = "1.47"
features = ["net", "macros"]

[dependencies.tokio-rustls]
version = "0.26"
features = ["ring", "tls12"]
default-features = false

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[target."cfg(unix)".dependencies]
libc = "0.2.126"
privdrop = "0.5.3"

[target."cfg(unix)".dev-dependencies]

[target."cfg(unix)".build-dependencies]

[features]
enterprise = []
foundation = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "common"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
