[package]
name = "email"
edition = "2024"
version = "0.0.1"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
compact_str = "0.9.0"
hashify = "0.2"
rand = "0.8"
rasn = "0.10"
rasn-cms = "0.10"
rasn-pkix = "0.10"
rsa = "0.9.2"
serde_json = "1.0"

[dependencies.cbc]
version = "0.1.2"
features = ["alloc"]

[dependencies.common]
path = "../common"

[dependencies.directory]
path = "../directory"

[dependencies.groupware]
path = "../groupware"

[dependencies.mail-builder]
version = "0.4"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding"]

[dependencies.nlp]
path = "../nlp"

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.sequoia-openpgp]
version = "2.0"
features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sieve-rs]
version = "0.7"
features = ["rkyv"]

[dependencies.smtp-proto]
version = "0.2"
features = ["rkyv"]

[dependencies.spam-filter]
path = "../spam-filter"

[dependencies.store]
path = "../store"

[dependencies.tokio]
version = "1.47"
features = ["net", "macros"]

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "email"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
