[package]
name = "http_proto"
edition = "2024"
version = "0.0.1"

[dependencies]
compact_str = "0.9.0"
form_urlencoded = "1.1.0"
http-body-util = "0.1.0"
percent-encoding = "2.3.1"
serde_json = "1.0"

[dependencies.common]
path = "../common"

[dependencies.hyper]
version = "1.0.1"
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1.1"
features = ["tokio"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.trc]
path = "../trc"

[dev-dependencies]

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "http_proto"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
