[package]
name = "http"
edition = "2024"
version = "0.0.1"

[dependencies]
async-stream = "0.3.5"
base64 = "0.22"
chrono = "0.4"
compact_str = "0.9.0"
http-body-util = "0.1.0"
mime = "0.3.17"
quick-xml = "0.38"
rev_lines = "0.3.0"
rsa = "0.9.2"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
x509-parser = "0.18"

[dependencies.common]
path = "../common"

[dependencies.dav]
path = "../dav"

[dependencies.directory]
path = "../directory"

[dependencies.email]
path = "../email"

[dependencies.form-data]
version = "0.6.0"
features = ["sync"]
default-features = false

[dependencies.groupware]
path = "../groupware"

[dependencies.http_proto]
path = "../http-proto"

[dependencies.hyper]
version = "1.0.1"
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1.1"
features = ["tokio"]

[dependencies.jmap]
path = "../jmap"

[dependencies.jmap_proto]
path = "../jmap-proto"

[dependencies.mail-auth]
version = "0.7.1"
features = ["generate"]

[dependencies.mail-builder]
version = "0.4"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding", "rkyv"]

[dependencies.mail-send]
version = "0.5"
features = ["cram-md5", "ring", "tls12"]
default-features = false

[dependencies.pkcs8]
version = "0.10.2"
features = ["alloc", "std"]

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.services]
path = "../services"

[dependencies.smtp]
path = "../smtp"

[dependencies.smtp-proto]
version = "0.2"

[dependencies.spam-filter]
path = "../spam-filter"

[dependencies.store]
path = "../store"

[dependencies.tokio]
version = "1.47"
features = ["rt"]

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dev-dependencies]

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "http"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
