[package]
name = "jmap_proto"
edition = "2024"
version = "0.0.1"

[dependencies]
hashify = "0.2"

[dependencies.ahash]
version = "0.8.2"
features = ["serde"]

[dependencies.calcard]
version = "0.3"

[dependencies.compact_str]
version = "0.9.0"
features = ["rkyv", "serde"]

[dependencies.jmap-tools]
version = "0.1"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding", "rkyv"]

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["raw_value"]

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[lib]
path = "src/lib.rs"
name = "jmap_proto"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
