[package]
name = "migration"
edition = "2024"
version = "0.0.1"

[dependencies]
base64 = "0.22"
bincode = "1.3.3"
compact_str = "0.9.0"
futures = "0.3"
num_cpus = "1.13.1"
serde_json = "1.0"

[dependencies.calcard_latest]
version = "0.3"
features = ["rkyv"]
package = "calcard"

[dependencies.calcard_v01]
version = "0.1"
features = ["rkyv"]
package = "calcard"

[dependencies.common]
path = "../common"

[dependencies.dav-proto]
path = "../dav-proto"

[dependencies.directory]
path = "../directory"

[dependencies.email]
path = "../email"

[dependencies.groupware]
path = "../groupware"

[dependencies.lz4_flex]
version = "0.12"
default-features = false

[dependencies.mail-auth]
version = "0.7.1"
features = ["rkyv"]

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding"]

[dependencies.nlp]
path = "../nlp"

[dependencies.proc_macros]
path = "../utils/proc-macros"

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sieve-rs]
version = "0.7"
features = ["rkyv"]

[dependencies.smtp]
path = "../smtp"

[dependencies.smtp-proto]
version = "0.2"
features = ["rkyv", "serde"]

[dependencies.store]
path = "../store"

[dependencies.tokio]
version = "1.47"
features = ["net", "macros"]

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "migration"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
