[package]
name = "nlp"
edition = "2024"
version = "0.0.1"

[dependencies]
hashify = "0.2.1"
jieba-rs = "0.8"
lru-cache = "0.1.2"
maplit = "1.0.2"
nohash = "0.2.0"
parking_lot = "0.12.1"
psl = "2"
rand = "0.9.2"
rust-stemmers = "1.2"
whatlang = "0.18"

[dependencies.ahash]
version = "0.8.3"
features = ["serde"]

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.utils]
path = "../utils"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies]
bincode = "1.3.3"

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[features]
test_mode = []

[lib]
path = "src/lib.rs"
name = "nlp"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
