[package]
name = "smtp"
edition = "2024"
version = "0.0.1"
authors = ["Stalwart Labs LLC <hello@stalw.art>"]
description = "Stalwart SMTP Server"
homepage = "https://stalw.art/smtp"
keywords = ["smtp", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only OR LicenseRef-SEL"
repository = "https://github.com/stalwartlabs/smtp-server"

[dependencies]
blake3 = "1.3"
chrono = "0.4"
compact_str = "0.9.0"
form_urlencoded = "1.1.0"
http-body-util = "0.1.0"
lru-cache = "0.1.2"
md5 = "0.8.0"
num_cpus = "1.15.0"
parking_lot = "0.12"
rand = "0.9.0"
rayon = "1.5"
regex = "1.7.0"
rustls-pemfile = "2.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10.6"
x509-parser = "0.18"

[dependencies.ahash]
version = "0.8"

[dependencies.common]
path = "../common"

[dependencies.directory]
path = "../directory"

[dependencies.email]
path = "../email"

[dependencies.hyper]
version = "1.0.1"
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1.1"
features = ["tokio"]

[dependencies.mail-auth]
version = "0.7.1"
features = ["rkyv"]

[dependencies.mail-builder]
version = "0.4"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding"]

[dependencies.mail-send]
version = "0.5"
features = ["cram-md5", "ring", "tls12"]
default-features = false

[dependencies.nlp]
path = "../nlp"

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls-webpki-roots", "http2"]
default-features = false

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.rustls]
version = "0.23.5"
features = ["std", "ring", "tls12"]
default-features = false

[dependencies.rustls-pki-types]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.sieve-rs]
version = "0.7"
features = ["rkyv"]

[dependencies.smtp-proto]
version = "0.2"
features = ["rkyv", "serde"]

[dependencies.spam-filter]
path = "../spam-filter"

[dependencies.store]
path = "../store"

[dependencies.tokio]
version = "1.47"
features = ["full"]

[dependencies.tokio-rustls]
version = "0.26"
features = ["ring", "tls12"]
default-features = false

[dependencies.trc]
path = "../trc"

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dependencies.webpki-roots]
version = "1.0"

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "smtp"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
